# AlekSIS-App-DashboardFeeds

./: CHANGELOG.rst  README.rst  pyproject.toml
aleksis/apps/dashboardfeeds/: __init__.py  admin.py  apps.py  html_helper.py  menus.py  models.py  settings.py  tasks.py  views.py
aleksis/apps/dashboardfeeds/locale/ar/LC_MESSAGES/: django.po
aleksis/apps/dashboardfeeds/locale/de_DE/LC_MESSAGES/: django.po
aleksis/apps/dashboardfeeds/locale/fr/LC_MESSAGES/: django.po
aleksis/apps/dashboardfeeds/locale/nb_NO/LC_MESSAGES/: django.po
aleksis/apps/dashboardfeeds/locale/tr_TR/LC_MESSAGES/: django.po
aleksis/apps/dashboardfeeds/migrations/: 0001_initial.py  0002_dashboardwidget_base_url.py  0002_icalfeedwidget.py  0003_rssfeedwidget_rss_source.py  0004_rssfeedwidget_text_only.py
aleksis/apps/dashboardfeeds/templates/dashboardfeeds/: empty.html  ical.html  rss.html
aleksis/apps/dashboardfeeds/util/: event_feed.py
