[tool.poetry]
name = "AlekSIS-App-DashboardFeeds"
version = "2.0a1"
packages = [
    { include = "aleksis" }
]
readme = "README.rst"
include = ["CHANGELOG.rst", "LICENCE.rst"]

description = "AlekSIS (School Information System) — App Dashboard Feeds (Include feeds from external resources as widgets on dashboard)"
authors = ["Julian Leucker <leuckerj@gmail.com>"]
license = "EUPL-1.2"
homepage = "https://aleksis.edugit.io/"
repository = "https://edugit.org/AlekSIS/Official/AlekSIS-App-DashboardFeeds"
documentation = "https://aleksis.edugit.io/AlekSIS/docs/html/"
classifiers = [
    "Environment :: Web Environment",
    "Intended Audience :: Education",
    "Topic :: Education"
]

[tool.poetry.dependencies]
python = "^3.7"
AlekSIS = { path = "../../.." }
feedparser = "^5.2.1"
ics = "^0.7"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
