[tool.poetry]
name = "AlekSIS-App-DashboardFeeds"
version = "2.0a3.dev0"
packages = [
    { include = "aleksis" }
]
readme = "README.rst"
include = ["CHANGELOG.rst", "LICENCE.rst", "aleksis/**/locale/*.mo"]

description = "AlekSIS (School Information System) — App Dashboard Feeds (Include feeds from external resources as widgets on dashboard)"
authors = ["Julian Leucker <leuckerj@gmail.com>", "Dominik George <dominik.george@teckids.org>"]
maintainers = ["Jonathan Weth <wethjo@katharineum.de>", "Dominik George <dominik.george@teckids.org>"]
license = "EUPL-1.2-or-later"
homepage = "https://aleksis.org/"
repository = "https://edugit.org/AlekSIS/official/AlekSIS-App-DashboardFeeds"
documentation = "https://aleksis.org/AlekSIS/docs/html/"
keywords = ["SIS", "education", "school", "calendar", "rss"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: Django :: 3.0",
    "Intended Audience :: Education",
    "Topic :: Education",
    "Typing :: Typed",
]

[[tool.poetry.source]]
name = "gitlab"
url = "https://edugit.org/api/v4/projects/461/packages/pypi/simple"
secondary = true

[tool.poetry.dependencies]
python = "^3.7"
feedparser = "^6.0.0"
django-feed-reader = "^0.2.1"
ics = "^0.7"
aleksis-core = "^2.0a3.dev0"

[tool.poetry.dev-dependencies]
sphinx = "^3.0"
sphinxcontrib-django = "^0.5.0"
sphinx-autodoc-typehints = "^1.7"
django-stubs = "^1.1"
pytest = "^6.0"
pytest-django = "^4.1"
pytest-django-testing-postgresql = "^0.1"
selenium = "^3.141.0"
safety = "^1.8.5"
flake8 = "^3.7.9"
flake8-django = "^1.0.0"
flake8-fixme = "^1.1.1"
flake8-mypy = "^17.8.0"
flake8-bandit = "^2.1.2"
flake8-builtins = "^1.4.1"
flake8-docstrings = "^1.5.0"
flake8-rst-docstrings = "^0.0.14"
black = "^19.10b0"
flake8-black = "^0.1.1"
isort = "^5.0.0"
flake8-isort = "^4.0.0"
pytest-cov = "^2.8.1"
pytest-sugar = "^0.9.2"

[tool.poetry.plugins."aleksis.app"]
dashboardfeeds = "aleksis.apps.dashboardfeeds.apps:DefaultConfig"

[tool.black]
line-length = 100
exclude = "/migrations/"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
